move all tests to ExceptionPath