@@ -24,14 +24,16 @@ public class MathSummaryTest {
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
 
-    assertEquals(1, summary.getSymbolicConstraintPaths().size());
+    assertEquals(1, summary.getExceptionPaths().size());
 
-    List<SymbolicConstraint> path0 = summary.getSymbolicConstraintPaths().get(0);
-    assertFalse(path0.get(0).truthValue());
-    assertTrue(path0.get(0).symExpr().toString().contains("this.radius >= 0"));
+    List<SymbolicConstraint> path0 = summary.getExceptionPaths().getFirst().getConstraints();
+    assertEquals("java.lang.RuntimeException", summary.getExceptionPaths().getFirst().getExceptionQualifiedName());
+
+    assertFalse(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("this.radius >= 0"));
 
     assertEquals(1, summary.getFormalParams().size());
-    assertEquals(SymKind.OBJECT, summary.getFormalParams().get(0).getKind());
+    assertEquals(SymKind.OBJECT, summary.getFormalParams().getFirst().getKind());
 
     assertEquals("((3.14 * this.radius) * this.radius)", summary.getReturnExpr().toString());
   }
@@ -44,16 +46,17 @@ public class MathSummaryTest {
     AnalysisResult analysis = pa.analyseMethod(methodSignature);
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
-    ;
 
-    assertEquals(1, summary.getSymbolicConstraintPaths().size());
+    assertEquals(1, summary.getExceptionPaths().size());
 
-    List<SymbolicConstraint> path0 = summary.getSymbolicConstraintPaths().get(0);
-    assertFalse(path0.get(0).truthValue());
-    assertTrue(path0.get(0).symExpr().toString().contains("y != 0"));
+    List<SymbolicConstraint> path0 = summary.getExceptionPaths().getFirst().getConstraints();
+    assertEquals("java.lang.RuntimeException", summary.getExceptionPaths().getFirst().getExceptionQualifiedName());
+
+    assertFalse(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("y != 0"));
 
     assertEquals(3, summary.getFormalParams().size());
-    assertEquals(SymKind.INT, summary.getFormalParams().get(0).getKind());
+    assertEquals(SymKind.INT, summary.getFormalParams().getFirst().getKind());
     assertEquals(SymKind.INT, summary.getFormalParams().get(1).getKind());
     assertEquals(SymKind.OBJECT, summary.getFormalParams().get(2).getKind());
 
@@ -70,21 +73,25 @@ public class MathSummaryTest {
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
 
-    assertEquals(2, summary.getSymbolicConstraintPaths().size());
+    assertEquals(2, summary.getExceptionPaths().size());
 
-    List<SymbolicConstraint> path0 = summary.getSymbolicConstraintPaths().get(0);
-    assertTrue(path0.get(0).truthValue());
-    assertTrue(path0.get(0).symExpr().toString().contains("p < 0"));
+    List<SymbolicConstraint> path0 = summary.getExceptionPaths().getFirst().getConstraints();
+    assertEquals("java.lang.RuntimeException", summary.getExceptionPaths().getFirst().getExceptionQualifiedName());
 
-    List<SymbolicConstraint> path1 = summary.getSymbolicConstraintPaths().get(1);
-    assertFalse(path1.get(0).truthValue());
-    assertTrue(path1.get(0).symExpr().toString().contains("p < 0"));
+    assertTrue(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("p < 0"));
+
+    List<SymbolicConstraint> path1 = summary.getExceptionPaths().get(1).getConstraints();
+    assertEquals("java.lang.RuntimeException", summary.getExceptionPaths().get(1).getExceptionQualifiedName());
+
+    assertFalse(path1.getFirst().truthValue());
+    assertTrue(path1.getFirst().symExpr().toString().contains("p < 0"));
 
     assertFalse(path1.get(1).truthValue());
     assertTrue(path1.get(1).symExpr().toString().contains("p <= 1"));
 
     assertEquals(2, summary.getFormalParams().size());
-    assertEquals(SymKind.INT, summary.getFormalParams().get(0).getKind());
+    assertEquals(SymKind.INT, summary.getFormalParams().getFirst().getKind());
     assertEquals(SymKind.OBJECT, summary.getFormalParams().get(1).getKind());
 
     assertEquals("p", summary.getReturnExpr().toString());
@@ -97,14 +104,16 @@ public class MathSummaryTest {
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
 
-    assertEquals(1, summary.getSymbolicConstraintPaths().size());
+    assertEquals(1, summary.getExceptionPaths().size());
 
-    List<SymbolicConstraint> path0 = summary.getSymbolicConstraintPaths().get(0);
-    assertFalse(path0.get(0).truthValue());
-    assertTrue(path0.get(0).symExpr().toString().contains("truncated >= 0"));
+    List<SymbolicConstraint> path0 = summary.getExceptionPaths().getFirst().getConstraints();
+    assertEquals("java.lang.RuntimeException", summary.getExceptionPaths().getFirst().getExceptionQualifiedName());
+
+    assertFalse(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("truncated >= 0"));
 
     assertEquals(2, summary.getFormalParams().size());
-    assertEquals(SymKind.REAL, summary.getFormalParams().get(0).getKind());
+    assertEquals(SymKind.REAL, summary.getFormalParams().getFirst().getKind());
     assertEquals(SymKind.OBJECT, summary.getFormalParams().get(1).getKind());
 
     assertEquals("truncated", summary.getReturnExpr().toString());
@@ -117,14 +126,16 @@ public class MathSummaryTest {
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
 
-    assertEquals(1, summary.getSymbolicConstraintPaths().size());
+    assertEquals(1, summary.getExceptionPaths().size());
 
-    List<SymbolicConstraint> path0 = summary.getSymbolicConstraintPaths().get(0);
-    assertFalse(path0.get(0).truthValue());
-    assertTrue(path0.get(0).symExpr().toString().contains("(int)d >= 0"));
+    List<SymbolicConstraint> path0 = summary.getExceptionPaths().getFirst().getConstraints();
+    assertEquals("java.lang.RuntimeException", summary.getExceptionPaths().getFirst().getExceptionQualifiedName());
+
+    assertFalse(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("(int)d >= 0"));
 
     assertEquals(2, summary.getFormalParams().size());
-    assertEquals(SymKind.REAL, summary.getFormalParams().get(0).getKind());
+    assertEquals(SymKind.REAL, summary.getFormalParams().getFirst().getKind());
     assertEquals(SymKind.OBJECT, summary.getFormalParams().get(1).getKind());
 
     assertEquals("(int)d", summary.getReturnExpr().toString());
